--- a/package.json
+++ b/package.json
@@ -15,5 +15,10 @@
   "bugs": {
     "url": "https://github.com/alestor123/SOCKET-TERMINAL/issues"
   },
-  "homepage": "https://github.com/alestor123/SOCKET-TERMINAL#readme"
+  "homepage": "https://github.com/alestor123/SOCKET-TERMINAL#readme",
+  "dependencies": {
+    "chalk": "^4.1.0",
+    "readline": "^1.3.0",
+    "socket.io-client": "^3.1.0"
+  }
 }
